examples/invalid/uppercase_false.jasn
// Uppercase False (should be lowercase)
{
  bad: False
}
